--- a/src/app/app-dev/app-dev.component.html
+++ b/src/app/app-dev/app-dev.component.html
@@ -1,19 +1,19 @@
 <div class="row" style="margin-top: 8%;padding: 0px 40px;">
-  <div class="col s6">
+  <div class="col s6 one">
   <h1 class="subHead">WEB DEVELOPMENT</h1>
   <div class="floatText">M</div>
   <h3 class="line">Make a mark with our cutting-edge web application development</h3>
   <h6 class="our">Our company has been developing web applications for the custom business requirements of all our esteemed clients. Our developer’s skills & experience and cutting-edge technology will deliver you with robust web application.</h6>
   <span class="uniRedBtn" routerLink="/Get-started">Get Quote <i class="fas fa-arrow-right"></i></span>
   </div>
-  <div class="col s3 center">
+  <div class="col s3 two center">
     <div><img class="UIimg" width="100%" src="../../assets/images/web-commerce.webp"></div>
     <h6 class="center clientName">Ecommerce</h6>
     <p class="center our">Provide you the ecommerce 
 platform with enriched UX/UI.</p>
   <a href="https://www.youtube.com/watch?v=BVMsRltq2yU&feature=youtu.be"><i class="fab fa-youtube"></i></a>
   </div>
-  <div class="col s3 center">
+  <div class="col s3 three center">
     <div><img class="UIimg" width="100%" src="../../assets/images/web-erp.webp"></div>
     <h6 class="center clientName">ERP Solutions</h6>
     <p class="center our">Fetch High Return on 
