--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,23 +32,23 @@
   [outDuration]="300"
   [stopPropagation]="true"
 >
-  <mz-dropdown-item><a routerLink="/Cloud">- UX/UI Design</a></mz-dropdown-item>
+  <mz-dropdown-item><a routerLink="/UI-Development">- UX/UI Design</a></mz-dropdown-item>
   <mz-dropdown-divider></mz-dropdown-divider>
-  <mz-dropdown-item><a routerLink="/Cloud">- Application Development</a></mz-dropdown-item>
+  <mz-dropdown-item><a routerLink="/App-Development">- Application Development</a></mz-dropdown-item>
   <mz-dropdown-divider></mz-dropdown-divider>
-  <mz-dropdown-item><a routerLink="/Cloud">- Mobile Development</a></mz-dropdown-item>
+  <mz-dropdown-item><a routerLink="/Mobile-Development">- Mobile Development</a></mz-dropdown-item>
   <mz-dropdown-divider></mz-dropdown-divider>
-  <mz-dropdown-item><a routerLink="/Cloud">- Desktop Application</a></mz-dropdown-item>
+  <mz-dropdown-item><a routerLink="/Desktop-Development">- Desktop Application</a></mz-dropdown-item>
   <mz-dropdown-divider></mz-dropdown-divider>
-  <mz-dropdown-item><a routerLink="/Cloud">- Photo-Outsourcing</a></mz-dropdown-item>
+  <mz-dropdown-item><a routerLink="/Photo-Outsourcing">- Photo-Outsourcing</a></mz-dropdown-item>
   <mz-dropdown-divider></mz-dropdown-divider>
-  <mz-dropdown-item><a routerLink="/Cloud">- SEO/Digital Marketing</a></mz-dropdown-item>
+  <mz-dropdown-item><a routerLink="/seo">- SEO/Digital Marketing</a></mz-dropdown-item>
   
 </mz-dropdown>
 
 
 
-    <span class="navName Servicebar" id="ServiceDown"><i class="fas fa-handshake"></i>  Services</span>
+    <span class="navName Servicebar" id="ServiceDown"><i class="fas fa-handshake"></i>  Services <i class="fas fa-angle-down"></i></span>
     <span class="navName"  routerLink="/Portfolio" routerLinkActive="TextBold">Portfolio</span>
     <span class="navName"  routerLink="/Photo-Outsourcing" routerLinkActive="TextBold">PhotoZing</span>
     <span class="navName"  routerLink="/Cloud" routerLinkActive="TextBold"><i class="fas fa-cloud"></i> Cloud</span>
