--- a/src/app/mob-dev/mob-dev.component.html
+++ b/src/app/mob-dev/mob-dev.component.html
@@ -1,20 +1,20 @@
 <div class="row" style="margin-top: 8%;padding: 0px 40px;">
-  <div class="col s6">
+  <div class="col s6 one">
   <h1 class="subHead">MOBILE APPLICATION DEVELOPMENT</h1>
   <div class="floatText">M</div>
   <h3 class="line">What Set Us Apart From Competitive Indian Mobile App Developers?</h3>
   <h6 class="our">We fuel your idea with practical solutions. We are not only into acquiring clients, we have an approach to maintain a lifelong relationship with every client of ours and be on our toes to assist them in any development need at any tick of the clock. We define the apps feature and functionality with a future perspective. Of course, the app will lure the present audience but we design and develop it in a manner which makes it future ready as well.</h6>
   <span class="uniRedBtn" routerLink="/Get-started">Get Quote <i class="fas fa-arrow-right"></i></span>
   </div>
-  <div class="col s3 center">
-    <div><img class="UIimg" width="100%" src="../../assets/images/web-commerce.webp"></div>
+  <div class="col s3 two center">
+    <div><img class="UIimg" width="100%" src="../../assets/images/android.webp"></div>
     <h6 class="center clientName">Android Development</h6>
     <p class="center our">we strategies your plan and apply necessary 
 methodology to create a perfect app for your business.</p>
   <a href=""><i class="fab fa-youtube"></i></a>
   </div>
-  <div class="col s3 center">
-    <div><img class="UIimg" width="100%" src="../../assets/images/web-erp.webp"></div>
+  <div class="col s3 three center">
+    <div><img class="UIimg" width="100%" src="../../assets/images/ios.webp"></div>
     <h6 class="center clientName">IOS Development</h6>
     <p class="center our">We develop the most innovative iPhone Applications. We have methodology to create a perfect app for your business.</p>
 <a href=""><i class="fab fa-youtube"></i></a>
@@ -43,31 +43,31 @@ methodology to create a perfect app for your business.</p>
   <div class="row">
   <div class="col s6">
     <ul class="our">
-                <li><i class="fas fa-map-pin"></i> Business Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Education Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Social Networking Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Entertainment Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Travel Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Book App Development</li>
-								<li><i class="fas fa-map-pin"></i> Navigation Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> News App Development</li>
-								<li><i class="fas fa-map-pin"></i> Health &amp; Fitness Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Lifestyle Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Finance Apps Development</li>
-								<li><i class="fas fa-map-pin"></i> Product Showcase App Development</li>
+                <li><i class="fas fa-map-pin"></i>  Business Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Education Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Social Networking Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Entertainment Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Travel Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Book App Development</li>
+								<li><i class="fas fa-map-pin"></i>  Navigation Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  News App Development</li>
+								<li><i class="fas fa-map-pin"></i>  Health &amp; Fitness Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Lifestyle Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Finance Apps Development</li>
+								<li><i class="fas fa-map-pin"></i>  Product Showcase App Development</li>
                                 </ul>
   </div>
   <div class="col s6">
     <ul class="our">
-                  <li><i class="fas fa-map-pin"></i> Website Mobile App Development</li>	
-                  <li><i class="fas fa-map-pin"></i> POS ( point of sale ) Mobile App Development</li>	
-                  <li><i class="fas fa-map-pin"></i> Retail Store Mobile App Development</li>						
-                  <li><i class="fas fa-map-pin"></i> Printing Mobile App Development</li>					
-                  <li><i class="fas fa-map-pin"></i> Accounting Mobile App Development</li>					
-                  <li><i class="fas fa-map-pin"></i> Insurance Mobile App Development</li>			
-                  <li><i class="fas fa-map-pin"></i> Hospitality Mobile App Development</li>					
-                  <li><i class="fas fa-map-pin"></i> Healthcare Mobile App Development</li>				
-                  <li><i class="fas fa-map-pin"></i> Restaurant Mobile App Development</li>
+                  <li><i class="fas fa-map-pin"></i>  Website Mobile App Development</li>	
+                  <li><i class="fas fa-map-pin"></i>  POS ( point of sale ) Mobile App Development</li>	
+                  <li><i class="fas fa-map-pin"></i>  Retail Store Mobile App Development</li>						
+                  <li><i class="fas fa-map-pin"></i>  Printing Mobile App Development</li>					
+                  <li><i class="fas fa-map-pin"></i>  Accounting Mobile App Development</li>					
+                  <li><i class="fas fa-map-pin"></i>  Insurance Mobile App Development</li>			
+                  <li><i class="fas fa-map-pin"></i>  Hospitality Mobile App Development</li>					
+                  <li><i class="fas fa-map-pin"></i>  Healthcare Mobile App Development</li>				
+                  <li><i class="fas fa-map-pin"></i>  Restaurant Mobile App Development</li>
                                 </ul>
   </div>
  </div>
