--- a/src/app/mob-dev/mob-dev.component.css
+++ b/src/app/mob-dev/mob-dev.component.css
@@ -1,11 +1,14 @@
 .our{
     color: #555555;
-    font-size: 16px;
-    line-height: 1.9em;
+    font-size: 14px;
+    line-height: 1.6em;
+    font-weight: 400;
     margin-bottom: 30px;
+    letter-spacing: 0.2px;
+    word-spacing: 2px;
 }
 .line::after{
-    margin-top: 10%;
+    margin-top: 13%;
     left: 0px;
 }
 .UIimg{
