--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,9 +48,8 @@
 
 
 
-    <span class="navName Servicebar" id="ServiceDown"><i class="fas fa-handshake"></i>  Services <i class="fas fa-angle-down"></i></span>
+    <span class="navName Servicebar" style="padding-bottom: 25px;" id="ServiceDown"><i class="fas fa-handshake"></i>  Services <i class="fas fa-angle-down"></i></span>
     <span class="navName"  routerLink="/Portfolio" routerLinkActive="TextBold">Portfolio</span>
-    <span class="navName"  routerLink="/Photo-Outsourcing" routerLinkActive="TextBold">PhotoZing</span>
     <span class="navName"  routerLink="/Cloud" routerLinkActive="TextBold"><i class="fas fa-cloud"></i> Cloud</span>
     <span class="navName"  routerLink="/team" routerLinkActive="TextBold">Contact Us</span>   
   </div>
