--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,7 @@
 <div class="row" style="margin-top:8%;">
         <div class="col center s12">
                 <img  src="../../assets/images/my-logo.png" id="logo">
+                
                 <div class="typed qoutes textcenter">
                 <div>We are providing the Service for " </div><div class="typestyle typed-element"></div>  
                 </div>
@@ -23,8 +24,8 @@
 
 <div class="row" style="margin-top:23% !important;padding-bottom: 10%;">
 
-<div class="col s5 why"><div class="floatText">A</div>Why do you need us?</div>
-<div class="col s6 whytxt">For the big ones, we rethink your ideas, revamp them with a new and different look. It gives us the responsibility of your brand's Digital Marketing and witness the clear uptick in your e-popularity & sales. Overall, we are the connoisseur in this niche.</div>
+<div class="col s12 l5 why"><div class="floatText">A</div>Why do you need us?</div>
+<div class="col s12 l7 whytxt">For the big ones, we rethink your ideas, revamp them with a new and different look. It gives us the responsibility of your brand's Digital Marketing and witness the clear uptick in your e-popularity & sales. Overall, we are the connoisseur in this niche.</div>
 </div>
 
 <!-- What we do -->
