--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -1,3 +1,4 @@
+<img class="zingimg" src="../../assets/images/back.jpg">
 <div class="row">
   <p id="zing">PhotoZing</p>
   <span class="center letter-spacing"><h4 style="font-weight: 300;font-size: 2.5rem;">When photography meets computer vision</h4>
